# kospam

./: .gitignore  .pre-commit-config.yaml  Changelog  LICENSE  Makefile.in  README  README.md  TODO  UPGRADE  WHATSNEW  aclocal.m4  antispam.c  aphash.c  av.h  avast.c  avast.h  avg.c  avg.h  avir.c  bayes.c  bayes.h  black.c  black.h  boundary.c  boundary.h  buffer.c  buffer.h  cache.c  cache.h  cdb.c  cdb1.h  cfg.c  cfg.h  cgi.c  cgi.h  chi.c  chi.h  clamd.c  clamd.h  clapf  (+123 more)
.github/actions/test/: action.yaml
.github/workflows/: test.yaml
TRAINING/: .htaccess  .htpasswd  index.html
blackhole/: black.crtab.sh  black.pl
contrib/alpine-builder/: Dockerfile  README  run.sh
contrib/cloudmark/: README  cloudmark.c
contrib/db/: add-gid-to-user-table.sql
contrib/i18n/: README  en.res  en.txt  ger.res  ger.txt  hun1.res  hun1.res2  hun1.txt  i18n.pl  junk.txt  make_array.pl  run.sh
contrib/installer/: clapf-install.sh
contrib/mailgraph/: mailgraph.patch
contrib/ooop/: Makefile.in  README  ooop-util.c  ooop-util.h  ooop.c  ooop.c-non-forking  ooop.sql  pop3.h  pop3_messages.h  pop3_session.c  pop3_spam.c  prefs.c  prefs.h  remote_auth.c
contrib/plugin/outlook/: README  VbaProject.OTM
contrib/postfix/: Dockerfile  README  main.cf  master.cf  run.sh
contrib/spamdrop_helper/: Makefile.in  spamdrop_helper.c
contrib/spamsum/: Makefile.in  spamsum.c  ssum.c
contrib/stat/: Makefile  Makefile.helper.in  Makefile.in  clapf-rrd-create.sh  clapf-rrd-update.sh  process_syslog.pl
contrib/train/: dovecot-train.sh
contrib/webserver/: clapf-apache-2.x.conf  clapf-nginx.conf
contrib/zombie/: README  clapf-postgrey  create-rrd.sh  not-zombie.hosts  postgrey-1.33.diff  postgrey_create_graph.sh  postgrey_log.pl  postgrey_push_to_rrd.pl  zombie.hosts.1  zombie.hosts.2
doc/html/: antispam.html  av.html  blackhole.html  blurb.html  config.html  examples.html  faq.html  group.html  howitworks.html  index.html  install.html  iso.html  ldap.html  mysql.html  ocr.html  questions.html  spamquarantine.html  stats.html  style.css  support.html  surbl.html  tokendatabase.html  training.html  training2.html  user.html  virtual.html  whitelist.html
doc/man/: blackhole.1  clapf.8  parsembox.1  passmail.1  spamdrop.1  spamtest.1  splitmbox.1  train.1
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.ubuntu  README  a.sh  build.sh  docker-compose.yaml  makecert.sh  start-alpine.sh  start-ubuntu.sh  start.sh
etc/: Makefile.in  cron.jobs.in  example.conf  procmailrc  smtp.acl.example  sphinx.conf.in  zombienets.regex
go-app/: README  go.mod  go.sum
go-app/cmd/send/: main.go  main_test.go
go-app/cmd/smtp/: main.go
go-app/cmd/smtpd/: main.go
go-app/cmd/smtptest/: smtp.go
go-app/pkg/acl/: acl.go  acl_test.go
go-app/pkg/cache/: cache.go
go-app/pkg/config/: smtpd.go  smtpd_test.go
go-app/pkg/utils/: daemon.go  switchuser.go  syslog.go  utils.go
go-app/pkg/version/: version.go  version_test.go
history/: Makefile.in  history-purge-mysql.sql  history-purge-sqlite3.sql  mail-sqlite3.sql  mail.sql  maillog.pl
init.d/: Makefile.in  clapf-maillog  clapf-maillog.debian.in  clapf-maillog.redhat  clapf-maillog.redhat.in  clapf-maillog.ubuntu  clapf-maillog.ubuntu.in  clapf-postgrey  clapf-postgrey.debian.in  clapf.in  clapf.in.redhat  clapf.in.ubuntu  clapf.redhat  clapf.redhat.in  clapf.ubuntu  clapf.ubuntu.in  rc.clapf-maillog.in  rc.clapf.in  rc.searchd.in
ldap/: UPGRADE  clapf-policy.schema  clapf-user.schema  clapf.schema  example.ldif  policy-example.ldif  qmail.schema  test.ldif
perl/: Makefile.in  createcdb.pl  mysql2cdb.pl  prepare.pl  shrink.pl  sqlite3.pl  uribl.pl
redhat/: build.sh  clapf.spec
src/: Makefile.in  antispam.c  aphash.c  attachment.c  av.h  avast.c  avir.c  base64.c  bayes.c  bayes.h  black.c  boundary.c  buffer.c  buffer.h  cfg.c  cfg.h  chi.c  chi.h  child.c  child.h  clamd.c  clapf.c  clapf.h  clapfconf.c  config.h  counters.c  cpartition.c  decoder.c  defs.h  digest.c  dirs.c  drweb.c  entities.c  errmsg.h  file.c  hash.c  hash.h  hash2.c  header.c  history.c  (+75 more)
src/obsoleted/: attachment.c  errmsg.h  history-to-sql.php  quarantine-daily-report.php  users.c  users.h
stat/: Makefile.in  clapf-rrd-create.sh  clapf-rrd-graph-oneline.sh  clapf-rrd-graph.sh  clapf-rrd-update.sh  clapf-stat.run.sh.in  process_syslog.pl  spamstat.pl
templates/: Makefile.in  template.virus  template.virus-hu
tests/: 11-aaaa.conf  case1.sh  case1.yaml  docker-compose.yaml  funcs.sh  kospam.conf  run.sh
tests/training/: 1.eml  t.eml
util/: Makefile.in  check_clapf.sh  check_clapf.sh.in  clapf_admin-ldap.sh.in  clapf_admin-sql.sh.in  db-mysql-root.sql.in  db-mysql.sql  db-psql.sql  db-sqlite3.sql  db-update-mysql.sql  db-update-sqlite3.sql  db_init.sh  db_init.sh.in  db_init_cdb.sh  db_init_mydb.sh  db_init_mydb.sh.in  db_init_mysql.sh  db_init_mysql.sh.in  db_init_sqlite3.sh  db_init_sqlite3.sh.in  db_train.sh.in  history-to-sql.php  indexer.main.sh  indexer.main.sh.in  kcdb.sh  kcdb_mysql.sh  ldap_sync.php  mysql2cdb.sh  purge-mysql.sql  purge-psql.sql  purge-sqlite3.sh  purge-sqlite3.sql  qrunner.php  quarantine-daily-report.php  spamdrop_helper.in  summary.php  update_clamav_sigs.sh  user2sq.sh  zombienets.regex
webui/: .htaccess  .htdb.php  Makefile  README  auth.php  blacklist.php  config.in.php  config.php  emails.php  footer.inc  funcs.php  graph.php  header.inc  header.php  index.php  ldap.php  login.php  logout.php  massdeliver.php  masstrain.php  massusers.php  mysql.php  policy.php  q.php  spamtelenul.css  sqlite3.php  stat.php  users.php  webui.php  whitelist.php
webui/bootstrap/css/: bootstrap.min.css
webui/controller/common/: error.php  home.php  layout-audit.php  layout-history.php  layout-quarantine.php  layout-search.php  menu.php
webui/controller/domain/: domain.php  remove.php
webui/sessions/: sessions.sdb
webui/setup/: setup.php  setup.tpl
webui/system/: controller.php  db.php  language.php  ldap.php  loader.php  misc.php  request.php  startup.php
zombie/: Makefile.in  README  clapf-postgrey  postgrey_whitelist_recipients
(+182 files in other folders)
